--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=auth
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
